--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ h1 {
   padding: 25px;
   border-radius: 5px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgb(248, 219, 53);
 }
 .formContentFirst {
   display: flex;
@@ -149,4 +149,22 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+.flex_user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.flex_user button {
+  border: none;
+  outline: none;
+  min-width: 300px;
+  min-height: 25px;
+  font-size: 18px;
+  padding: 0;
+  color: rgb(255, 255, 255);
+  background-color: rgba(255, 0, 0, 0.418);
+  border-radius: 3px;
+  font-family: "Nunito", sans-serif;
+  cursor: pointer;
 }
